<resources>
    <string name="app_name">Calcul Moyenne</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="note_1">Note 1</string>
    <string name="note2">Note2</string>
    <string name="note_2">Note 2</string>
    <string name="note_3">Note 3</string>
    <string name="calculer">Calculer</string>
    <string name="note_31">Note 3</string>
    <string name="note_11">Note 1</string>
</resources>