<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_content_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph" />

    <LinearLayout
        android:layout_width="383dp"
        android:layout_height="594dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="21dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_1" />

        <EditText
            android:id="@+id/idNote1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/note_11"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="23dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note2" />

        <EditText
            android:id="@+id/idNote2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/note_2"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="28dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_3" />

        <EditText
            android:id="@+id/IdNote3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/note_31"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="125dp" />

        <Button
            android:id="@+id/btnCalculer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculer"
           />

        <TextView
            android:id="@+id/txtMoy"
            android:layout_width="match_parent"
            android:layout_height="60dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>